--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -17,6 +17,10 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
       name = "k8s.io/gengo"
       unused-packages = false
 
+[[override]]
+  name = "gopkg.in/fsnotify.v1"
+  source = "https://github.com/fsnotify/fsnotify.git"
+
 [[constraint]]
   version = "1.1.1"
   name = "github.com/gogo/protobuf"
@@ -32,6 +36,14 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
 [[constraint]]
   name = "github.com/solo-io/go-utils"
   version = "0.8.23"
+
+[[constraint]]
+  name = "sigs.k8s.io/controller-runtime"
+  version = "v0.2.0-beta.3"
+
+[[constraint]]
+  name = "k8s.io/client-go"
+  version = "kubernetes-1.14.1"
 
 [[constraint]]
   version = ">=0.8.0"
